k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Namespace","metadata":{"annotations":{},"name":"avgmart"}}
  labels:
    kubernetes.io/metadata.name: avgmart
  name: avgmart
spec:
  finalizers:
    - kubernetes
