k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"name":"avgmart-frontend","namespace":"avgmart"},"spec":{"ports":[{"port":80,"targetPort":80}],"selector":{"app":"avgmart-frontend"}}}
  name: avgmart-frontend
  namespace: avgmart
spec:
  clusterIP: 10.43.106.189
  clusterIPs:
    - 10.43.106.189
  internalTrafficPolicy: Cluster
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: avgmart-frontend
  sessionAffinity: None
  type: ClusterIP
