k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: avgmart-ingress
  namespace: avgmart
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"

spec:
  ingressClassName: nginx

  tls:
    - hosts:
        - avgmart.com
        - www.avgmart.com
      secretName: avgmart-tls

    - hosts:
        - api.avgmart.com
      secretName: avgmart-api-tls

  rules:

    # Frontend
    - host: avgmart.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: avgmart-frontend
                port:
                  number: 80

    - host: www.avgmart.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: avgmart-frontend
                port:
                  number: 80

    # Backend API
    - host: api.avgmart.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: avgmart-backend
                port:
                  number: 5000
